@@ -1,29 +1,17 @@
+% $Id$
 % htlatex tex4ht-docbook-xtpipes "xhtml,next,3" "" "-d./"
+%
+% Copyright (C) 2009, 2010 TeX Users Group.
+% Copyright (C) 2000--2009 Eitan M. Gurari
+% Released under LPPL 1.3c+.
+% See tex4ht-cpright.tex for license text.
 
 \documentclass{article}
     \Configure{ProTex}{log,<<<>>>,title,list,`,[[]]}
 \begin{document}
 
-
-%%%%%%%%%%%%%%%%%%%%% definitions %%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-\newcount\tmpcnt  \tmpcnt\time  \divide\tmpcnt  60
-\edef\temp{\the\tmpcnt}
-\multiply\tmpcnt  -60 \advance\tmpcnt  \time
-
-\edef\version{\the\year-\ifnum \month<10 0\fi
-  \the\month-\ifnum \day<10 0\fi\the\day
-   -\ifnum \temp<10 0\fi \temp
-   :\ifnum \tmpcnt<10 0\fi\the\tmpcnt}
-
-\def\CopyYear.#1.{%
-   \ifnum #1=\year #1\space\space\space\space\space\space
-    \else          #1--\the\year\fi
-}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-
+\input{common}
+\input{tex4ht-cpright}
 
 
 
@@ -43,6 +31,10 @@
 \<docbook.4xt\><<<
 <?xml version="1.0" encoding="UTF-8" ?>
 <!DOCTYPE xtpipes SYSTEM "xtpipes.dtd" >
+<!-- docbook.4xt (`version), generated from `jobname.tex
+     Copyright (C) 2009, 2010 TeX Users Group
+     Copyright (C) `CopyYear.2008. Eitan M. Gurari
+`<TeX4ht copyright`> -->
 <xtpipes preamble="yes" signature="docbook.4xt (`version)">
    <sax content-handler="xtpipes.util.ScriptsManager" 
         lexical-handler="xtpipes.util.ScriptsManagerLH" >
@@ -62,10 +54,10 @@
 
 \<DbUtilities.java\><<<
 package tex4ht;
-`<copy right`>
-/* DbUtilities.java                      `version */
-/* Copyright (C) `CopyYear.2008.    Eitan M. Gurari            */
-`<cont copy right`>
+/* DbUtilities.java (`version), generated from `jobname.tex
+   Copyright (C) 2009, 2010 TeX Users Group
+   Copyright (C) `CopyYear.2008. Eitan M. Gurari
+`<TeX4ht copyright`> */
 
 import org.w3c.dom.*;
 public class DbUtilities {
